k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-bday-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
  selector:
    svc: hello-bday-service
