k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-bday-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello/.*
        backend:
          serviceName: hello-bday-service
          servicePort: 80
